# olc-2024-the-runner

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: combined.frag  combined.vert  light.frag  light.vert
assets/textures/: home.piskel  map.piskel  map_v2.piskel  player.piskel  props.hgss  resources.hgss  resources.piskel  rocks.hgss  tiles.hgss  tiles.piskel
release/v0/TheRunner/: .history  .ninja_deps  .ninja_log  TheRunner  build.ninja  imgui.ini  settings.hg
release/v0/TheRunner/.cmake/api/v1/reply/: cache-v2-c46c94aa03dec0cd6901.json  cmakeFiles-v1-a39410d5be873ccb77e9.json  codemodel-v2-3e93de7df6d57c1cf915.json  index-2024-08-20T02-42-59-0806.json  target-TheRunner-Release-d76bb35d000fb6acd52e.json  target-imgui-Release-d9f956a09e005d08e5cf.json
release/v0/TheRunnerWeb/: TheRunner.data  TheRunner.html  TheRunner.js  index.html  package-lock.json
release/v0/assets/textures/: player.hgss  tiles.hgss  tiles.piskel  trees.hgss
src/: constants.h  game.cpp  game.h
src/common/: actionMap.h  camera.h  gameState.cpp  gameState.h  mapBuilder.cpp  mapBuilder.h  persistentSettings.cpp  persistentSettings.h  props.h  resources.h  tiles.h  ui.cpp  ui.h
src/common/enums/: actions.h  blockColor.h  blockType.h  renderModes.h
src/components/: body.h  inventory.cpp  inventory.h  light.h  player.h  prop.h  resource.h  spriteSheet.h  startPoint.h  tile.h  tree.h  uiFrame.h  ysort.h
src/scenes/: mainMenu.cpp  mainMenu.h  runtime.cpp  runtime.h  settings.cpp  settings.h
src/systems/: movement.cpp  movement.h  renderer.cpp  renderer.h  ysorter.cpp  ysorter.h
